practice/notes/notes.txt
D:\core java\practice\day 2\src>javac -d ../bin Test2.java
Test2.java:7: error: incompatible types: int cannot be converted to boolean
        if(count)//  javac err
           ^
1 error

D:\core java\practice\day 2\src>